--- a/functions/package.json
+++ b/functions/package.json
@@ -15,23 +15,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "archiver": "^5.3.1",
-    "cross-fetch": "^3.1.5",
-    "file-saver": "^2.0.5",
     "firebase": "^9.11.0",
-    "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
-    "jszip": "^3.10.1",
-    "node-fetch": "^3.2.10",
-    "unzipper": "^0.10.11",
-    "uuid": "^9.0.0",
-    "xhr2": "^0.2.1"
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
-    "@types/archiver": "^5.3.1",
-    "@types/file-saver": "^2.0.5",
-    "@types/unzipper": "^0.10.5",
-    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
