--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase": "^9.11.0",
+    "firebase-admin": "^11.1.0",
     "firebase-functions": "^3.18.0",
     "jszip": "^3.10.1"
   },
