--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase": "^9.11.0",
     "firebase-admin": "^11.1.0",
     "firebase-functions": "^3.18.0",
